Issue 6: delete_moves_to_attic option should be configurable per share
git-svn-id: http://greyhole.googlecode.com/svn/trunk@7 b36e06b6-ea79-11de-95aa-47033305a456

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -112,8 +112,11 @@
 #### Attic ####
 # Move deleted files to attic, instead of deleting them?
 # (Yes, attic is just another name for a 'Recycle Bin'...)
+# You can specify per-share preferences that will override the global preference.
 
 	delete_moves_to_attic = yes
+	delete_moves_to_attic[CrashPlan] = no
+	delete_moves_to_attic[TimeMachine] = no
 
 #### Owner ####
 # Who will own the files & directories we create?
