Issue 10: Use syslogd for samba->greyhole logs, instead of 'hijacking' the samba logs
git-svn-id: http://greyhole.googlecode.com/svn/trunk@23 b36e06b6-ea79-11de-95aa-47033305a456

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -13,9 +13,9 @@
 
 	email_to = root@test.com
 
-#### Samba Log File ####
+#### Syslog Log File for Samba logs coming from the Greyhole module ####
 
-	samba_log_file = /var/log/samba/samba.log
+	samba_log_file = /var/log/smb_greyhole.log
 
 #### Greyhole Log File ####
 
