Issue 7: Handle disappearing graveyard better
git-svn-id: http://greyhole.googlecode.com/svn/trunk@25 b36e06b6-ea79-11de-95aa-47033305a456

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -9,7 +9,8 @@
 	db_name = greyhole
 
 #### Email Recipient ####
-# Will receive email reports for daily fsck, or when all drives are out of available space.
+# Will receive email reports for daily fsck, or when all drives are out of 
+# available space.
 
 	email_to = root@test.com
 
@@ -40,22 +41,12 @@
 	landing_zone = /mnt/hdd0/shares
 
 #### Graveyard ####
-# The graveyard is where 'tombstones' are saved. Tombstones are small text 
-# files that contain metadata about your files.
-# For example, it contains the paths to all copies of a file, and flags to 
-# indicate if the copy is currently available or not.
-# The number of file copies you'll have will define how much space the 
-# graveyard will take.
-# 100,000 file copies should take approximately 400 MB of graveyard space.
+# The centralized graveyard is now deprecated. Do not define a graveyard below 
+# unless you have files in there that you want to migrate to the 
+# de-centralized graveyards.
+# If you didn't use Greyhole with version 0.5.9 or lower, you don't need this.
 
-	graveyard = /mnt/hdd1/graveyard
-
-# Make sure you put your landing zone and graveyard on two distinct hard 
-# drive; fsck will use one to re-construct the other, if one of the drive 
-# fails.
-# You don't want to loose both directories if a single drive fails! While it 
-# would still be technically feasible to reconstruct both by walking all 
-# storage pool directories, fsck doesn't do that at this time.
+	#graveyard = /mnt/hdd1/graveyard
 
 #### Shares Settings ####
 # Number of copies of each file you want Greyhole to keep, per Share.
@@ -68,7 +59,7 @@
 	num_copies[CrashPlan] = 1
 	num_copies[Games] = 2
 	num_copies[Music] = 2
-	num_copies[Photos] = 100 # This will insure those files are on all hard drives
+	num_copies[Photos] = 100 # This will insure those files are on all HDD
 	num_copies[RecordedTV] = 1
 	num_copies[Software] = 2
 	num_copies[TimeMachine] = 1
@@ -104,7 +95,8 @@
 	dir_selection_algorithm = most_available_space
 
 # How long should free space calculations be cached (in seconds).
-# When selecting drives using their available / free space, the last cached value will be used.
+# When selecting drives using their available / free space, the last cached 
+# value will be used.
 # Use 0 to disable caching.
 
 	df_cache_time = 15
@@ -112,7 +104,8 @@
 #### Attic ####
 # Move deleted files to attic, instead of deleting them?
 # (Yes, attic is just another name for a 'Recycle Bin'...)
-# You can specify per-share preferences that will override the global preference.
+# You can specify per-share preferences that will override the global 
+# preference.
 
 	delete_moves_to_attic = yes
 	delete_moves_to_attic[CrashPlan] = no
@@ -125,7 +118,7 @@
 	files_owner = gb:sambausers
 
 #### Permissions ####
-# Permissions of created directories (graveyard and storage pool directories) 
+# Permissions of created directories (graveyards and storage pool directories) 
 # and files (file copies, tombstones files)
 # Format: 0xxx (octal)
 
