rsyslog.conf isn't very effective; it's better to read /var/log/messages directly, instead of trying to split the greyhole logs to somewhere else. I've seen many occurences where rsyslogd stopped sending the greyhole logs to the smb_greyhole.log at 3am...
git-svn-id: http://greyhole.googlecode.com/svn/trunk@28 b36e06b6-ea79-11de-95aa-47033305a456

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -16,7 +16,7 @@
 
 #### Syslog Log File for Samba logs coming from the Greyhole module ####
 
-	samba_log_file = /var/log/smb_greyhole.log
+	samba_log_file = /var/log/messages
 
 #### Greyhole Log File ####
 
