New web-app to configure; simplified installation instructions; commited compiled samba modules for Fedora 12
git-svn-id: http://greyhole.googlecode.com/svn/trunk@33 b36e06b6-ea79-11de-95aa-47033305a456

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -11,8 +11,11 @@
 #### Email Recipient ####
 # Will receive email reports for daily fsck, or when all drives are out of 
 # available space.
+# When specifying no @hostname, the email will be delivered to the local 
+# mailbox of that user.
 
-	email_to = root@test.com
+	email_to = root
+	#email_to = root@test.com
 
 #### Syslog Log File for Samba logs coming from the Greyhole module ####
 
@@ -56,7 +59,7 @@
 # created, or extra copies deleted.
 
 	num_copies[Backups] = 2
-	num_copies[CrashPlan] = 1
+	num_copies[CrashPlan] = 2
 	num_copies[Games] = 2
 	num_copies[Music] = 2
 	num_copies[Photos] = 100 # This will insure those files are on all HDD
@@ -78,12 +81,12 @@
 # additional copies.
 
 	storage_pool_directory = /mnt/hdd0/gh, min_free: 200gb
-	storage_pool_directory = /mnt/hdd1/gh, min_free: 20gb
-	storage_pool_directory = /mnt/hdd2/gh, min_free: 20gb
-	storage_pool_directory = /mnt/hdd3/gh, min_free: 20gb
-	storage_pool_directory = /mnt/hdd4/gh, min_free: 20gb
-	storage_pool_directory = /mnt/hdd5/gh, min_free: 20gb
-	storage_pool_directory = /mnt/hdd6/gh, min_free: 20gb
+	storage_pool_directory = /mnt/hdd1/gh, min_free: 10gb
+	storage_pool_directory = /mnt/hdd2/gh, min_free: 10gb
+	storage_pool_directory = /mnt/hdd3/gh, min_free: 10gb
+	storage_pool_directory = /mnt/hdd4/gh, min_free: 10gb
+	storage_pool_directory = /mnt/hdd5/gh, min_free: 10gb
+	storage_pool_directory = /mnt/hdd6/gh, min_free: 10gb
 
 #### Storage Selection Algorithm ####
 # available algorithms: random, most_available_space
