Simplified configuration & use: deprecated landing zong setting, and owner/permissions settings: each share has now it's own landing zone, i.e. it's path, as defined in smb.conf; owner & permissions are now applied using the original owner & permissions, if available.
git-svn-id: http://greyhole.googlecode.com/svn/trunk@37 b36e06b6-ea79-11de-95aa-47033305a456

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -34,14 +34,8 @@
 	log_memory_usage = no
 
 #### Landing Zone ####
-# The landing zone is the directory that contains all your shares.
-# All the shares defined in your smb.conf should be sub-directories of this 
-# directory.
-# You should use your biggest partition as the landing zone, as this is what 
-# will be used to store the incoming files until Greyhole move them somewhere 
-# else.
-
-	landing_zone = /mnt/hdd0/shares
+# The landing zone is now deprecated. If you still have this setting in your 
+# config file, you can safely remove it.
 
 #### Graveyard ####
 # The centralized graveyard is now deprecated. Do not define a graveyard below 
@@ -113,17 +107,3 @@
 	delete_moves_to_attic = yes
 	delete_moves_to_attic[CrashPlan] = no
 	delete_moves_to_attic[TimeMachine] = no
-
-#### Owner ####
-# Who will own the files & directories we create?
-# Format: user:group
-
-	files_owner = gb:sambausers
-
-#### Permissions ####
-# Permissions of created directories (graveyards and storage pool directories) 
-# and files (file copies, tombstones files)
-# Format: 0xxx (octal)
-
-	files_permissions = 0664
-	folders_permissions = 0775
