Issue 3: Allow option to force specific files on specific hard drive(s)
git-svn-id: http://greyhole.googlecode.com/svn/trunk@49 b36e06b6-ea79-11de-95aa-47033305a456

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -91,6 +91,27 @@
 
 	dir_selection_algorithm = most_available_space
 
+#### Sticky Files ####
+# Sticky files are files that will always 'live' together, in the storage pool.
+#
+# This will allow you to read (and read-only!) those files by using the 
+# storage pool directories themselves, instead of using the mounted shares.
+# To see when that might be useful, read Issue #3 at the URL below.
+# [http://code.google.com/p/greyhole/issues/detail?id=3]
+#
+# Each sticky_files line should start with the name of a share, followed by a 
+# directory inside that share.
+# One or more stick_into lines should follow each sticky_files line, if you 
+# want the files to go on specific hard drive(s).
+# If you don't specify any stick_into, the drive with the most free space will 
+# be use to hold your files together.
+
+	sticky_files = Music/
+
+#	sticky_files = Videos/Movies/
+#		stick_into = /mnt/hdd1/gh
+#		stick_into = /mnt/hdd5/gh
+
 # How long should free space calculations be cached (in seconds).
 # When selecting drives using their available / free space, the last cached 
 # value will be used.
