Bugfixes for Amahi integration with newly installed Greyhole (not yet configured)
git-svn-id: http://greyhole.googlecode.com/svn/trunk@51 b36e06b6-ea79-11de-95aa-47033305a456

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -25,7 +25,7 @@
 
 	greyhole_log_file = /var/log/greyhole.log
 
-# Available verbosity levels: DEBUG, INFO, WARN, ERROR
+# Available verbosity levels: DEBUG, INFO, WARN, ERROR, CRITICAL
 
 	log_level = DEBUG
 
@@ -33,34 +33,23 @@
 
 	log_memory_usage = no
 
-#### Landing Zone ####
-# The landing zone is now deprecated. If you still have this setting in your 
-# config file, you can safely remove it.
-
-#### Graveyard ####
-# The centralized graveyard is now deprecated. Do not define a graveyard below 
-# unless you have files in there that you want to migrate to the 
-# de-centralized graveyards.
-# If you didn't use Greyhole with version 0.5.9 or lower, you don't need this.
-
-	#graveyard = /mnt/hdd1/graveyard
-
 #### Shares Settings ####
 # Number of copies of each file you want Greyhole to keep, per Share.
 # This is not the number of duplicates! 2 copies = 1 duplicate
 # If you change one of those, you should run fsck manually, or wait for the 
-# daily fsck (you created that cron, right?), to have the additional copies 
-# created, or extra copies deleted.
-
-	num_copies[Backups] = 2
-	num_copies[CrashPlan] = 2
-	num_copies[Games] = 2
-	num_copies[Music] = 2
-	num_copies[Photos] = 100 # This will insure those files are on all HDD
-	num_copies[RecordedTV] = 1
-	num_copies[Software] = 2
-	num_copies[TimeMachine] = 1
-	num_copies[Videos] = 2
+# daily fsck, to have the additional copies created, or extra copies deleted.
+#
+# Example:
+#
+#	num_copies[Backups] = 2
+#	num_copies[CrashPlan] = 2
+#	num_copies[Games] = 2
+#	num_copies[Music] = 2
+#	num_copies[Photos] = 100 # This will insure those files are on all HDD
+#	num_copies[RecordedTV] = 1
+#	num_copies[Software] = 2
+#	num_copies[TimeMachine] = 1
+#	num_copies[Videos] = 2
 
 #### Storage Pool ####
 # Where should the file copies be kept?
@@ -73,14 +62,13 @@
 # which you specified you want multiple copies, this drive will be used first, 
 # but the other drives that have less free space will be used to store the 
 # additional copies.
-
-	storage_pool_directory = /mnt/hdd0/gh, min_free: 10gb
-	storage_pool_directory = /mnt/hdd1/gh, min_free: 10gb
-	storage_pool_directory = /mnt/hdd2/gh, min_free: 10gb
-	storage_pool_directory = /mnt/hdd3/gh, min_free: 10gb
-	storage_pool_directory = /mnt/hdd4/gh, min_free: 10gb
-	storage_pool_directory = /mnt/hdd5/gh, min_free: 10gb
-	storage_pool_directory = /mnt/hdd6/gh, min_free: 10gb
+#
+# Example:
+#
+#	storage_pool_directory = /mnt/hdd0/gh, min_free: 10gb
+#	storage_pool_directory = /mnt/hdd1/gh, min_free: 10gb
+#	storage_pool_directory = /mnt/hdd2/gh, min_free: 10gb
+#	storage_pool_directory = /mnt/hdd3/gh, min_free: 10gb
 
 #### Storage Selection Algorithm ####
 # available algorithms: random, most_available_space
@@ -121,10 +109,10 @@
 
 #### Attic ####
 # Move deleted files to attic, instead of deleting them?
-# (Yes, attic is just another name for a 'Recycle Bin'...)
+# (Yes, attic is just another name for a Recycle Bin.)
 # You can specify per-share preferences that will override the global 
 # preference.
 
 	delete_moves_to_attic = yes
-	delete_moves_to_attic[CrashPlan] = no
-	delete_moves_to_attic[TimeMachine] = no
+#	delete_moves_to_attic[CrashPlan] = no
+#	delete_moves_to_attic[TimeMachine] = no
