New feature: allow greyhole to work with either MySQL or SQLite. Patch from Carlos Puchol (Amahi)
git-svn-id: http://greyhole.googlecode.com/svn/trunk@99 b36e06b6-ea79-11de-95aa-47033305a456

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -2,11 +2,15 @@
 # This file is part of Greyhole.
 
 #### Database Connection ####
+# Available engines: mysql, sqlite
+# When choosing sqlite, 'db_host', 'db_user', 'db_pass' & 'db_name' options are not required, but 'db_path' is.
 
+	db_engine = mysql
 	db_host = localhost
 	db_user = greyhole_user
 	db_pass = 89y63jdwe
 	db_name = greyhole
+	#db_path = /var/cache/greyhole.sqlite
 
 #### Email Recipient ####
 # Will receive email reports for daily fsck, or when all drives are out of 
