New feature: frozen directories and --thaw command. See example conf file for details.
git-svn-id: http://greyhole.googlecode.com/svn/trunk@114 b36e06b6-ea79-11de-95aa-47033305a456

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -129,3 +129,15 @@
 # When set to 'no', existing copies will be kept, and updated using rsync.
 
 	balance_modified_files = no
+
+#### Frozen directories ####
+# Directories listed below will not be touched by Greyhole until the user 
+# wants it to (greyhole --thaw <dir>).
+#
+# This can be used to process often-updated files at regular intervals, 
+# instead of having Greyhole process them as soon as they change.
+#
+# Each frozen_directory line should start with the name of a share, followed 
+# by a directory inside that share.
+
+#	frozen_directory = Data/mysql
