Improvement: configurable max_queued_tasks. Defaults are 1000 for SQLite, and 100000 for MySQL, because SQLite is much slower than MySQL to insert new tasks from the samba log.
git-svn-id: http://greyhole.googlecode.com/svn/trunk@272 b36e06b6-ea79-11de-95aa-47033305a456

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -141,3 +141,12 @@
 # by a directory inside that share.
 
 #	frozen_directory = Data/mysql
+
+#### Maximum Queued Tasks ####
+# Maximum number of queued tasks to store in MySQL/SQLite, when parsing the 
+# Samba log. Use a lower number if you experience slowness while parsing that 
+# log.
+# Default is 100000 when using MySQL, and 1000 when using SQLite.
+# Setting a value here will overwrite those defaults.
+
+	max_queued_tasks = 100000
