--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -30,6 +30,7 @@
 	greyhole_log_file = /var/log/greyhole.log
 
 # Available verbosity levels: DEBUG, INFO, WARN, ERROR, CRITICAL
+# Note that for --status to work correctly, you'll need to keep this to DEBUG.
 
 	log_level = DEBUG
 
