Improvement: fixed small typos in example greyhole.conf
git-svn-id: http://greyhole.googlecode.com/svn/trunk@346 b36e06b6-ea79-11de-95aa-47033305a456

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -129,7 +129,7 @@
 
 #### Frozen directories ####
 # Directories listed below will not be touched by Greyhole until the user 
-# wants it to (greyhole --thaw <dir>).
+# wants it to (greyhole --thaw=<dir>).
 #
 # This can be used to process often-updated files at regular intervals, 
 # instead of having Greyhole process them as soon as they change.
@@ -141,9 +141,9 @@
 
 #### Maximum Queued Tasks ####
 # Maximum number of queued tasks to store in MySQL/SQLite, when parsing the 
-# Samba log. Use a lower number if you experience slowness while parsing that 
-# log.
+# spool directory. Use a lower number if you experience slowness while parsing 
+# spooled operations.
 # Default is 100000 when using MySQL, and 1000 when using SQLite.
 # Setting a value here will overwrite those defaults.
 
-	max_queued_tasks = 100000
+#	max_queued_tasks = 100000
