Improvement: added new setting to skip lsof checks; not sure this is desirable or not... Testing with that setting disabled here. Default to enabled (same as before) until I'm sure this is not needed...
git-svn-id: http://greyhole.googlecode.com/svn/trunk@408 b36e06b6-ea79-11de-95aa-47033305a456

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -34,6 +34,12 @@
 
 	log_memory_usage = no
 
+# Look for other processes working on files on the Greyhole shares?
+# Disable to get more speed, but this might break some files, if any 
+# application change your files while Greyhole tries to work on them.
+
+	check_for_open_files = yes
+
 #### Shares Settings ####
 # Number of copies of each file you want Greyhole to keep, per Share.
 # This is not the number of duplicates! 2 copies = 1 duplicate
