Issue 68:         This checkin touches a lot of code, all tombstone calls that load by directory         are now done via the tombstone_iterator class which loads tombstones in blocks         to avoid excessive memory consumption. Block sizes are dynamic as they are         as large as there are files in a directory on all pool drives. It loads all 	files from a directory across all pool drives, this avoids loading the same 	tombstone twice. If a block is empty (i.e. we had a directory with nothing or 	a directory of directories) it'll proceed and pull the next directory off 	the stack and try to load a block from it, etc.
	In most normal use cases this will result drastically reduced memory usage.
	The test case used was 100,000 files spread across 100 directories sitting
	ontop of a root directory. Renames were made to the root directory resulting
	in tombstones being loaded for all 100,000 files. Prior to this modification,
	the test case would crash with a 128M memory_limit. It now passes with as
	little as 32M. (It may need even less than this but I did not test.)

	The only case in which it'll offer no improvements is if a user has a flat
	directory structure. (i.e. a single directory containing a large number of
	files) In this case the new memory_check function will allow us to quit before 
	we get to >95% memory usage and give a meaningful error in the greyhole log.

	A new option has been added called memory_limit. By default it is set to 128M
	but this can be overwritten in the greyhole.conf file.


git-svn-id: http://greyhole.googlecode.com/svn/trunk@431 b36e06b6-ea79-11de-95aa-47033305a456

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -153,3 +153,13 @@
 # Setting a value here will overwrite those defaults.
 
 #	max_queued_tasks = 100000
+
+#### Memory Limit ###
+## Maximum amount of ram that Greyhole can consume while running
+## this can be higher than the global php.ini memory limit
+## if greyhole uses >95% of available memory while loading
+## data it will quit and throw an error in the logs
+# Default is 128M
+# Setting a value here will overwrite this default.
+# It is NOT advisable to lower the memory limit.
+#        memory_limit = 128M
