New options to prioritize specific drives
New options to prioritize specific drives
Closes GH-13

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -77,6 +77,27 @@
 #	storage_pool_directory = /mnt/hdd2/gh, min_free: 10gb
 #	storage_pool_directory = /mnt/hdd3/gh, min_free: 10gb
 
+### Directory selection groups ###
+# The groups you define here will be available to use in the 
+# dir_selection_algorithm option(s) below.
+# The group names (SATA, IDE, USB and Remote in the example below) can be 
+# anything you'd like.
+# Use one line per group, with the following syntax:
+#   group name: one or more (comma-separated) storage pool directories
+# If you ommit any storage pool directory from your groups, this directory 
+# will NOT be used by Greyhole!
+
+#	dir_selection_groups = SATA: /mnt/hdd0/gh
+#	                       IDE: /mnt/hdd1/gh, /mnt/hdd2/gh
+#	                       USB: /mnt/hdd3/gh
+#	                       Remote: /mnt/remote1/gh, /mnt/remote2/gh
+
+# You can also define dir_selection_groups for specific shares:
+#
+#	dir_selection_groups[Photos] = SATA: /mnt/hdd0/gh
+#	                               IDE: /mnt/hdd1/gh, /mnt/hdd2/gh
+#	                               USB: /mnt/hdd3/gh
+
 #### Storage Selection Algorithm ####
 # available algorithms: random, most_available_space
 #   most_available_space: use the directories with the most available space 
@@ -85,6 +106,22 @@
 #   random: use a random directory with available space
 
 	dir_selection_algorithm = most_available_space
+
+# If you defined dir_selection_groups above, you'll want to use them here.
+# Use the 'forced' keyword, then list the groups you want to use, in order, and 
+# prefix each group name with the number of directories you want to use from 
+# that group before using the next group.
+# Use the 'all' keyword to indicate you want Greyhole to use all directories 
+# from a specific group, before starting to use directories from the next group.
+# You'll need to indicate how Greyhole should pick drives within a group by 
+# ending your line with either random or most_available_space.
+#
+#	dir_selection_algorithm = forced (all SATA, 1xIDE, 1xUSB, 1xRemote) most_available_space
+
+# You can also define dir_selection_algorithm for specific shares:
+#
+#	dir_selection_algorithm[Videos] = random
+#	dir_selection_algorithm[Photos] = forced (1xSATA, 1xIDE, all USB) random
 
 #### Sticky Files ####
 # Sticky files are files that will always 'live' together, in the storage pool.
