--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -152,14 +152,14 @@
 	df_cache_time = 15
 
 #### Attic ####
-# Move deleted files to attic, instead of deleting them?
-# (Yes, attic is just another name for a Recycle Bin.)
+# Move deleted files to trash, instead of deleting them?
+# (Yes, trash is just another name for a Recycle Bin.)
 # You can specify per-share preferences that will override the global 
 # preference.
 
-	delete_moves_to_attic = yes
-#	delete_moves_to_attic[CrashPlan] = no
-#	delete_moves_to_attic[TimeMachine] = no
+	delete_moves_to_trash = yes
+#	delete_moves_to_trash[CrashPlan] = no
+#	delete_moves_to_trash[TimeMachine] = no
 
 #### Balance with modified files ####
 # Change this to 'yes' to use modified files copies to help balance the 
