Issue 24 - relacing attic references with trash

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -151,7 +151,7 @@
 
 	df_cache_time = 15
 
-#### Attic ####
+#### Trash ####
 # Move deleted files to trash, instead of deleting them?
 # (Yes, trash is just another name for a Recycle Bin.)
 # You can specify per-share preferences that will override the global 
