Improvement: Now using cp instead of rsync by default for file copies
rsync was found to take more resources than cp for both new files, and
when updating existing files, so it was replaced by cp. A new option in
greyhole.conf (copy_method) allows you to keep rsync, or use cp.

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -200,3 +200,11 @@
 # Setting a value here will overwrite this default.
 # It is NOT advisable to lower the memory limit.
 #        memory_limit = 128M
+
+#### Copy Method ####
+# Possible values: cp, rsync
+# cp is less CPU-intensive, and generally faster than rsync, which is still 
+# available for backward compatibility
+
+#	copy_method = cp
+
