--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -52,7 +52,7 @@
 #	num_copies[CrashPlan] = 2
 #	num_copies[Games] = 2
 #	num_copies[Music] = 2
-#	num_copies[Photos] = 100 # This will insure those files are on all HDD
+#	num_copies[Photos] = max # This will insure those files are on all HDD
 #	num_copies[RecordedTV] = 1
 #	num_copies[Software] = 2
 #	num_copies[TimeMachine] = 1
