--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -189,10 +189,10 @@
 # Maximum number of queued tasks to store in MySQL/SQLite, when parsing the 
 # spool directory. Use a lower number if you experience slowness while parsing 
 # spooled operations.
-# Default is 100000 when using MySQL, and 1000 when using SQLite.
+# Default is 10000000 when using MySQL, and 1000 when using SQLite.
 # Setting a value here will overwrite those defaults.
 
-#	max_queued_tasks = 100000
+#	max_queued_tasks = 10000000
 
 #### Memory Limit ###
 ## Maximum amount of ram that Greyhole can consume while running
