Improvement: You can now log to syslog instead of a standard file
Closes GH-14

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -23,9 +23,10 @@
 
 #### Greyhole Log File ####
 
+#	greyhole_log_file = syslog
 	greyhole_log_file = /var/log/greyhole.log
 
-# Available verbosity levels: DEBUG, INFO, WARN, ERROR, CRITICAL
+# Available verbosity levels: DEBUG, INFO, WARN, ERROR
 # Note that for --status to work correctly, you'll need to keep this to DEBUG.
 
 	log_level = DEBUG
