New feature: greyhole.conf controls daemon niceness (default to 1)
Closes GH-21

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -21,6 +21,14 @@
 	email_to = root
 	#email_to = root@test.com
 
+#### Greyhole Daemon Niceness ####
+# Niceness of the background daemon that handle most of the heavy lifting.
+# Number between -20 and 19.
+# The higher the number, the more 'nice' the daemon will be, i.e. the less
+# resources it will get, versus other processes with a lower niceness.
+
+#	daemon_niceness = 1
+
 #### Greyhole Log File ####
 
 #	greyhole_log_file = syslog
