--- a/upstart.conf
+++ b/upstart.conf
@@ -4,4 +4,10 @@ author      "Guillaume Boudreau"
 start on started mysql and started smbd
 stop on shutdown
 
-exec ionice -c 2 -n 7 /usr/bin/greyhole --daemon
+script
+    n=`grep daemon_niceness /etc/greyhole.conf | grep -v '#.*daemon_niceness' | sed 's/^.*= *\(.*\) *$/\1/'`
+	if [ "$n" = "" ]; then
+		n=1
+	fi
+	nice -n $n /usr/bin/greyhole --daemon
+end script
