Improvement: added necessary PID file to use monit (or similar) when using Upstart (Ubuntu 10+)

--- a/upstart.conf
+++ b/upstart.conf
@@ -11,3 +11,12 @@ script
 	fi
 	nice -n $n /usr/bin/greyhole --daemon
 end script
+
+post-start script
+    PID=`status greyhole | egrep -oi '([0-9]+)$' | head -n1`
+    echo $PID > /var/run/greyhole.pid
+end script
+
+post-stop script
+   rm -f /var/run/greyhole.pid
+end script
