Improvement: .greyhole_uses_this files are not needed anymore
If you have them, they will be removed when the Greyhole daemon
restarts.
To replace a drive (re-mount a new drive in the same path where you had
an old drive), you'll need to use greyhole
--replace=/path/to/storage/pool/drive
Closes GH-25

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -86,6 +86,13 @@
 #	storage_pool_drive = /mnt/hdd2/gh, min_free: 10gb
 #	storage_pool_drive = /mnt/hdd3/gh, min_free: 10gb
 
+# The following can help you test Greyhole by defining multiple storage_pool_drive 
+# that are in fact just empty directories on the same drive.
+# WARNING! Do NOT enable that option when you're not testing Greyhole.
+# Doing so could result is lost data when a drive will fail.
+#
+#	allow_multiple_sp_per_device = no
+
 ### Storage Drive Selection Groups ###
 # The groups you define here will be available to use in the 
 # drive_selection_algorithm option(s) below.
