Support for Samba 3.6 (partial; missing i386 VFS .so module)

--- a/DEBIAN/Makefile
+++ b/DEBIAN/Makefile
@@ -58,11 +58,13 @@ build:
 ifeq ($(ARCH), amd64)
 		mkdir -p $(DESTDIR)usr/lib64/samba/vfs/
 		mkdir -p $(DESTDIR)usr/lib64/greyhole/
-		install -m 0644 -D -p samba-module/bin/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba.so
+		install -m 0644 -D -p samba-module/bin/3.4/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba34.so
 		install -m 0644 -D -p samba-module/bin/3.5/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba35.so
+		install -m 0644 -D -p samba-module/bin/3.6/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba36.so
 else
 		mkdir -p $(DESTDIR)usr/lib/samba/vfs/
 		mkdir -p $(DESTDIR)usr/lib/greyhole/
-		install -m 0644 -D -p samba-module/bin/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba.so
+		install -m 0644 -D -p samba-module/bin/3.4/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba34.so
 		install -m 0644 -D -p samba-module/bin/3.5/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba35.so
+		install -m 0644 -D -p samba-module/bin/3.6/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba36.so
 endif
