New feature: new drive selection algorithm: least_used_space. Will balance used space instead of free space (most_available_space).
Closes GH-42

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -117,11 +117,13 @@
 #	                                 USB: /mnt/hdd3/gh
 
 #### Storage Drive Selection Algorithm ####
-# available algorithms: random, most_available_space
+# available algorithms: most_available_space, least_used_space
 #   most_available_space: use the drives with the most available space 
 #     first, so that available space on all drives should become and stay 
 #     balanced.
-#   random: use a random drive with available space
+#   least_used_space: use the drives with the least used space 
+#     first, so that used space on all drives should become and stay 
+#     balanced.
 
 	drive_selection_algorithm = most_available_space
 
@@ -132,14 +134,14 @@
 # Use the 'all' keyword to indicate you want Greyhole to use all drives 
 # from a specific group before starting to use drives from the next group.
 # You'll need to indicate how Greyhole should pick drives within a group by 
-# ending your line with either 'random' or 'most_available_space'.
+# ending your line with either 'least_used_space' or 'most_available_space'.
 #
 #	drive_selection_algorithm = forced (1xOK, 1xNEW, 1xBROKEN, 1xREMOTE) most_available_space
 
 # You can also define drive_selection_algorithm for specific shares:
 #
-#	drive_selection_algorithm[Videos] = random
-#	drive_selection_algorithm[Photos] = forced (all SATA, 1xIDE, 1xUSB) random
+#	drive_selection_algorithm[Videos] = least_used_space
+#	drive_selection_algorithm[Photos] = forced (all SATA, 1xIDE, 1xUSB) most_available_space
 
 #### Sticky Files ####
 # Sticky files are files that will always 'live' together, in the storage pool.
