Improvement: du stats are now computed correctly, when running multiple fsck manually. du stats are now saved in the database (was saved in a log file previously). du stats script is now included in all packages (deb, rpm, tgz).

--- a/DEBIAN/control
+++ b/DEBIAN/control
@@ -1,6 +1,6 @@
 Section: net
 Priority: extra
-Maintainer: Guillaume Boudreau <gb@greyhole.net>
+Maintainer: Guillaume Boudreau <guillaume@greyhole.net>
 Homepage: http://www.greyhole.net
 Package: greyhole
 Version: 0.9.3-1
