--- a/DEBIAN/Makefile
+++ b/DEBIAN/Makefile
@@ -4,7 +4,6 @@ deb: build
 	rm initd_script.sh
 	rm greyhole
 	rm greyhole-dfree
-	rm greyhole-config-update
 	rm logrotate.greyhole
 	rm schema-mysql.sql
 	rm schema-sqlite.sql
@@ -27,28 +26,32 @@ build:
 	mkdir -p $(DESTDIR)usr/bin/
 	mkdir -p $(DESTDIR)usr/share/greyhole/
 	mkdir -p $(DESTDIR)etc/logrotate.d/
-	mkdir -p $(DESTDIR)usr/share/greyhole/
+	mkdir -p $(DESTDIR)usr/share/greyhole/web-app/
 	mkdir -p $(DESTDIR)etc/cron.d/
 	mkdir -p $(DESTDIR)etc/cron.daily/
 	mkdir -p $(DESTDIR)etc/cron.weekly/
 	mkdir -p $(DESTDIR)usr/share/man/man1/
 	mkdir -p $(DESTDIR)usr/share/man/man5/
 
-	install -m 0755 -D -p initd_script.sh $(DESTDIR)etc/init.d/greyhole
-	install -m 0644 -D -p upstart.conf $(DESTDIR)etc/init/greyhole.conf
 	install -m 0755 -D -p greyhole $(DESTDIR)usr/bin
 	install -m 0755 -D -p greyhole-dfree $(DESTDIR)usr/bin
-	install -m 0755 -D -p greyhole-config-update $(DESTDIR)usr/bin
-	install -m 0644 -D -p logrotate.greyhole $(DESTDIR)etc/logrotate.d/greyhole
+
 	install -m 0644 -D -p schema-mysql.sql $(DESTDIR)usr/share/greyhole/
 	install -m 0644 -D -p schema-sqlite.sql $(DESTDIR)usr/share/greyhole/
 	install -m 0755 -D -p db_migration-sqlite2mysql.sh $(DESTDIR)usr/share/greyhole/
+	install -m 0644 -D -p greyhole.example.conf $(DESTDIR)usr/share/greyhole/
+
 	install -m 0644 -D -p greyhole.example.conf $(DESTDIR)etc/greyhole.conf
+	install -m 0755 -D -p initd_script.sh $(DESTDIR)etc/init.d/greyhole
+	install -m 0644 -D -p upstart.conf $(DESTDIR)etc/init/greyhole.conf
+	install -m 0644 -D -p logrotate.greyhole $(DESTDIR)etc/logrotate.d/greyhole
 	install -m 0644 -D -p greyhole.cron.d $(DESTDIR)etc/cron.d/greyhole
 	install -m 0755 -D -p greyhole.cron.weekly $(DESTDIR)etc/cron.weekly/greyhole
 	install -m 0755 -D -p greyhole.cron.daily $(DESTDIR)etc/cron.daily/greyhole
+
+	install -m 0644 -D -p web-app/index.php $(DESTDIR)usr/share/greyhole/web-app/index.php
+	install -m 0644 -D -p web-app/README $(DESTDIR)usr/share/greyhole/web-app/README
 	
-	install -m 0644 -D -p CHANGES $(DESTDIR)usr/share/greyhole/
 	install -m 0644 -D -p USAGE $(DESTDIR)usr/share/greyhole/
 	
 	install -m 0644 -D -p docs/greyhole.1.gz $(DESTDIR)usr/share/man/man1/
