New option (on by default) to remove old entries from the tasks_completed table. Will keep 365 days by default, but user can override in greyhole.conf, and specify a number of days, or 'forever' to never delete anything.

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -218,3 +218,11 @@
 # available for backward compatibility
 
 #	copy_method = cp
+
+#### Executed tasks retention ####
+# How long should executed tasks be kept in the database, after having been executed.
+# Those are strictly for debugging purposes; they serve no other purposes.
+# Enter a number of days, or 'forever' (no quotes).
+# The default is to keep 365 days.
+
+#	executed_tasks_retention = 365
