--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -11,6 +11,12 @@
 	db_pass = 89y63jdwe
 	db_name = greyhole
 
+#### Timezone ####
+# You can comment this out if you already define a `date.timezone` in your php.ini. Otherwise, this config option is mandatory.
+# See the list of allowed values here: http://www.php.net/manual/en/timezones.php
+
+    #timezone = America/Montreal
+
 #### Email Recipient ####
 # Will receive email reports for daily fsck, or when all drives are out of 
 # available space.
