New feature: new `greyhole_error_log_file` option for greyhole.conf, to separate INFO/DEBUG log lines from WARN/ERROR logs.

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -35,9 +35,15 @@
 #	daemon_niceness = 1
 
 #### Greyhole Log File ####
+# If you define a greyhole_error_log_file, WARNING, ERROR and CRITICAL logs will be written there, instead of using greyhole_log_file.
+# Notes:
+#   - greyhole_error_log_file will be ignored if greyhole_log_file = syslog.
+#   - you can't use syslog for greyhole_error_log_file and a normal file for greyhole_log_file.
+#   - if you use something else than /var/log/greyhole.*, you will want to change /etc/logrotate.d/greyhole accordingly.
 
 #	greyhole_log_file = syslog
 	greyhole_log_file = /var/log/greyhole.log
+#   greyhole_error_log_file = /var/log/greyhole.err
 
 # Available verbosity levels: DEBUG, INFO, WARN, ERROR
 # Note that for --status to work correctly, you'll need to keep this to DEBUG.
