Added option to ignore files. Fixes GH-2. See https://github.com/gboudreau/Greyhole/issues/2 and greyhole.example.conf for details.

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -238,3 +238,26 @@
 # The default is to keep 365 days.
 
 #	executed_tasks_retention = 365
+
+#### Ignored files & folders ####
+# Files that match the patterns below will be ignored by Greyhole.
+# They will stay in the landing zone indefinitely, so be careful on what you 
+# define here. List here all files and folders that are temporary, to prevent
+# Greyhole from working for nothing.
+#
+# Format is Regular Expressions (PCRE syntax)
+#
+# ignored_files is matched against the file name only.
+# ignored_folders is matched against the concatenation of the share name and
+#   the full path to the file (without the filename), eg: Videos/Movies/HD
+
+    # rsync temporary files
+    ignored_files = \..*\.[0-9a-zA-Z]{6}
+    # Microsoft Office temporary files
+    ignored_files = [0-9A-F]{8}\.tmp
+    # CrashPlan (restore) temporary files
+    ignored_files = \.cprestoretmp.*
+    # SABnzbd temporary folders when extracting a download
+    ignored_folders = .*/_UNPACK_.*
+    # Windows thumbs database files
+    #ignored_files = Thumb.db
