--enable-dropbox, and allow saving metadata files to Dropbox; just playing, not sure how useful that is, really...

--- a/greyhole.example.conf
+++ b/greyhole.example.conf
@@ -261,3 +261,13 @@
     ignored_folders = .*/_UNPACK_.*
     # Windows thumbs database files
     #ignored_files = Thumb.db
+
+#### Dropbox ####
+# A copy of all your metadata files can be stored in your Dropbox account.
+# This would allow you to have an easy to search index of all your files.
+# And this could also serve as a backup, in case something goes wrong on your server.
+#
+# Before you enable this, you will need to execute `greyhole --enable-dropbox`
+
+    #save_metadata_on_dropbox = no
+    #dropbox_library_path = /usr/share/greyhole/dropbox-sdk
