--- a/DEBIAN/control
+++ b/DEBIAN/control
@@ -5,7 +5,7 @@ Homepage: http://www.greyhole.net
 Package: greyhole
 Version: 0.9.3-1
 Architecture: i386
-Depends: libc6 (>= 2.4), samba (>= 3.4.3), samba-common, samba-common-bin, php5-cli (>= 5), php5-mysql, php-pear, mysql-server, rsync, sysstat, php5-intl, lsof
+Depends: libc6 (>= 2.4), samba (>= 3.4.3), samba-common, samba-common-bin, lsof, rsync, sysstat, mysql-server, php5-cli (>= 5), php-pear, php5-intl, php5-mysql | php5-mysqlnd
 Description: Drive pooling technology for Samba
  Allows you to create a storage pool, accessible from
  Samba shares, that offers data redundancy and JBOD concatenation.
